[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "volttron-lib-modbustk-driver"
version = "0.1.0"
description = "ModbusTK Driver supported and maintained by the Volttron team."
authors = ["Mark Bonicillo <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/VOLTTRON/volttron-lib-modbustk-driver"
homepage = "https://github.com/VOLTTRON/volttron-drivers/volttron-lib-modbustk-driver"
keywords = []
packages = [ { include = "volttron", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
modbus-tk = "^1.1.2"
pyserial = "^3.5"
PyYAML = "^6.0"
volttron-lib-base-driver = {git = "https://github.com/VOLTTRON/volttron-lib-base-driver.git", branch = "develop"}

[tool.poetry.group.dev.dependencies]
volttron-testing = "^0.3.1a3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
mypy = "^0.942"
coverage = "^6.3.2"
isort = "^5.10.1"

[tool.poetry.group.documentation.dependencies]
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
